
	* src/pdsh/opt.c : Update to use new rcmd interface.
	  Process hosts passed to on command line to accept rcmd type prefix
	  as rcmd_type:hosts,... Allow multiple invocations of -w.

	* src/pdsh/dsh.c, src/pdsh/dsh.h : 
	  Update to use new rcmd interface.

	* src/pdsh/Makefile.am, src/pdsh/Makefile.in : 
	  Remove mod_rcmd.[ch] and add rcmd.[ch].

2005-12-22  Mark Grondona <mgrondona@llnl.gov>

	* src/common/split.c, src/common/split.h : Added. 
	  Move list_split() implementation which was used in several 
	  modules into pdsh common code.

	* src/modules/genders.c, src/modules/sdr.c, src/modules/nodeattr.c,
	  src/modules/dshgroup.c, src/modules/netgroup.c, src/modules/slurm.c :
	  Use list_split() from src/common/split.c instead of internal
	  _list_split() implementation.

2005-12-15  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/netgroup.c : Add netgroup module providing support
	  for reading list of targets from /etc/netgroup file or NIS using
	  standard setnetent/getnetent calls.
	
	* configure.ac, pdsh.spec, config/ac_netgroup.m4, doc/pdsh.1.in,
	  src/modules/Makefile.am : 
	  Build, package, and document dshgroup module.

	* : Rerun ./bootstrap 

2005-12-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : Move processing of -x (exclude hosts by name)
	  until after mod_postop() has been called, because mod_postop()
	  may modify the list of target hosts.

	* src/modules/sshcmd.c (_pipecmd) : Close all file descriptors >2 
	  before exec'ing ssh, so that one ssh process' stdin doesn't remain
	  open in a subsequently invoked ssh. We tried to do this by setting
	  the close-on-exec flag on the fds when the socketpair was created
	  in pdsh, but this introduces a race between when the fd is opened
	  to when the flag is set where an ssh in another thread can be 
	  created. Closing all fds greater than 2 should work in all cases
	  and is simpler.

2005-10-26  Mark Grondona <mgrondona@llnl.gov>
